# ppv-backend

./: .env.example  .gitignore  docker-compose.yml
fastapi-app/: .env.example  Dockerfile  alembic.ini  create_app.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
fastapi-app/alembic/: env.py
fastapi-app/alembic/versions/: 2025_12_05_0003-6b1cb2db474d_create_table_user_auth_user_data_match_.py  2025_12_05_0058-3b9b6edb223f_added_column_score_for_players_and_type_.py  2025_12_05_0228-e6d5889591c4_added_column_duration_in_match.py  2025_12_08_1815-a27638849fd3_added_new_table_userstats.py  2025_12_13_1602-f0ead78decfb_made_property_middle_name_of_table_.py  2025_12_13_1811-8b9c605f6a12_added_column_avatar_url_in_users_data_.py  2025_12_14_2025-d145ac8420b6_added_new_table.py  2025_12_14_2147-3560e1265b6b_added_new_type_for_user_statuses.py  2025_12_18_1642-263beb8fae70_schange_column_name_in_table_matches.py  2025_12_23_0259-78c0f7d4cd63_added_column_status_for_table_matches.py  2025_12_23_0550-206c0eb4d7f1_change_players_score_column_to_not_null.py
fastapi-app/api/: __init__.py
fastapi-app/api/api_v1/: __init__.py  auth.py  matches.py  resources.py  schemas.py  session.py  users.py
fastapi-app/api/dependencies/: __init__.py  authorization.py  repositories.py  services.py
fastapi-app/api/middlewares/: __init__.py  auth_middleware.py  middlewares.py
fastapi-app/core/: config.py
fastapi-app/core/exceptions/: auth.py  basic.py  crud.py  errors_handlers.py
fastapi-app/core/models/: __init__.py  db_helper.py  init_data.py  match.py  role.py  (+1 more)
(+38 files in other folders)
